# Deepfake-Detection-Blueprint

./: .gitattributes  Dockerfile  README.md  pyproject.toml
.github/workflows/: sync_hf_space.yaml
Weights/: weights.tar
demo/: app.py  reboot_space.py  run.sh
docs/: customization.md  future-features-contributions.md
src/blueprint/: model.py  preprocess.py
